Fix clear search button on mobile view of filtered results so that it doesn't overlap content.

--- a/src/styles/bookshelf.scss
+++ b/src/styles/bookshelf.scss
@@ -151,8 +151,9 @@ $book_brown: rgba(77, 63, 63, 0.63);
     .clear__button {
       position: absolute;
       height: fit;
-      top: 90%;
+      top: 85%;
       left: none;
+      width: 18%;
     }
     .main__searchwrapper {
       width: 101vw;
